--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
   <div class="card-container">
     <div style="display: flex; flex-wrap: wrap; gap: 10px; justify-content: center;">
 
-      <div class="card" style="flex: 1 1 calc(45% - 10px); background-color: #ffffff; padding: 20px; border-radius: 10px; box-shadow: 0px 0px 5px rgba(0,0,0,0.1); min-width: 140px; text-align: center;" onclick="openPage('partyInfo')">
+      <div class="card" style="flex: 1 1 calc(45% - 10px); background-color: #ffffff; padding: 20px; border-radius: 10px; box-shadow: 0px 0px 5px rgba(0,0,0,0.1); min-width: 140px; text-align: center;" onclick="window.location.href='party-info.html'">
         <h3 style="font-size: 18px; margin-bottom: 10px;">Party Info</h3>
       </div>
 
