--- a/index.html
+++ b/index.html
@@ -2,37 +2,6 @@
 <html>
   <head>
     <title>Login / Dashboard</title>
-    <script src="auth.js"></script>
-     <script>
-    window.onload = function () {
-      checkLogin(function(email) {
-        // If logged in, show dashboard
-        showDashboard(email);
-      });
-
-      // Handle form submission for login
-      document.getElementById('loginForm').addEventListener('submit', function(event) {
-        event.preventDefault();
-        const email = document.getElementById('email').value;
-        const password = document.getElementById('password').value;
-        
-        login(email, password, function(loggedInEmail) {
-          showDashboard(loggedInEmail);
-        });
-      });
-    };
-
-    function showLogin() {
-      document.getElementById('loginSection').classList.remove('hidden');
-      document.getElementById('dashboardSection').classList.add('hidden');
-    }
-
-    function showDashboard(email) {
-      document.getElementById('loginSection').classList.add('hidden');
-      document.getElementById('dashboardSection').classList.remove('hidden');
-      document.getElementById('userEmail').innerText = email;
-    }
-  </script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <style>
       /* Basic Styling */
@@ -189,7 +158,7 @@
   <div class="card-container">
     <div style="display: flex; flex-wrap: wrap; gap: 10px; justify-content: center;">
 
-      <div class="card" style="flex: 1 1 calc(45% - 10px); background-color: #ffffff; padding: 20px; border-radius: 10px; box-shadow: 0px 0px 5px rgba(0,0,0,0.1); min-width: 140px; text-align: center;" onclick="window.location.href='party-info.html'">
+      <div class="card" style="flex: 1 1 calc(45% - 10px); background-color: #ffffff; padding: 20px; border-radius: 10px; box-shadow: 0px 0px 5px rgba(0,0,0,0.1); min-width: 140px; text-align: center;" onclick="openPage('partyInfo')">
         <h3 style="font-size: 18px; margin-bottom: 10px;">Party Info</h3>
       </div>
 
@@ -225,6 +194,18 @@
 
 
 <script>
+const SCRIPT_URL = 'https://script.google.com/macros/s/AKfycbyZs7Xr2OxZdwMg-iZFJYaBDrj3ik5H-mkXKncQrMPyvPXvnfDmkWGP9O0eFpVxe_U1Xw/exec';
+
+window.onload = function () {
+  // Check session on load — not available with ContentService, so show login by default
+  showLogin();
+
+  // Attach submit event to the form
+  document.getElementById('loginForm').addEventListener('submit', function(event) {
+    event.preventDefault();
+    login();
+  });
+};
 
 function login() {
   const email = document.getElementById('email').value;
@@ -246,7 +227,6 @@ function login() {
       loginSpinner.classList.add('hidden');
 
       if (response.success) {
-        localStorage.setItem('email', response.email);
         showDashboard(response.email);
         document.getElementById('error').innerText = "";
       } else {
@@ -263,7 +243,6 @@ function login() {
 
 function logout() {
   const email = document.getElementById('userEmail').innerText;
-  localStorage.removeItem('email');
   fetch(`${SCRIPT_URL}?action=logout&email=${encodeURIComponent(email)}`)
     .then(() => showLogin())
     .catch(() => showLogin()); // Fallback on error
