--- a/index.html
+++ b/index.html
@@ -1,53 +1,303 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Login / Dashboard</title>
-  <link rel="stylesheet" href="styles.css" />
-</head>
-<body>
-  <div class="container">
-    <!-- Login Section -->
-    <div id="loginSection">
-      <h2>Login</h2>
-      <div class="error" id="error"></div>
-      <form id="loginForm">
+<html>
+  <head>
+    <title>Login / Dashboard</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <style>
+      /* Basic Styling */
+      body {
+        font-family: Arial, sans-serif;
+        padding: 20px;
+        margin: 0;
+        background-color: #f4f4f9;
+      }
+
+      /* Centered Container */
+      .container {
+        max-width: 400px;
+        margin: auto;
+        background-color: white;
+        padding: 20px;
+        border-radius: 10px;
+        box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+      }
+
+      h2 {
+        text-align: center;
+        font-size: 24px;
+        margin-bottom: 20px;
+      }
+
+      /* Form Input Fields */
+      input,
+      button {
+        width: 100%;
+        padding: 14px;
+        margin: 8px 0;
+        box-sizing: border-box;
+        border: 1px solid #ccc;
+        border-radius: 5px;
+        font-size: 16px;
+      }
+
+      input:focus,
+      button:focus {
+        outline: none;
+        border-color: #007BFF;
+      }
+
+      /* Button Styling */
+      button {
+        background-color: #007BFF;
+        color: white;
+        border: none;
+        cursor: pointer;
+      }
+
+      button:hover {
+        background-color: #0056b3;
+      }
+
+      /* Error Message */
+      .error {
+        color: red;
+        font-size: 14px;
+        margin-bottom: 20px;
+      }
+
+      /* Hide sections */
+      .hidden {
+        display: none;
+      }
+
+      /* Responsive Design */
+      @media (max-width: 600px) {
+        body {
+          padding: 10px;
+        }
+
+        .container {
+          padding: 15px;
+        }
+
+        h2 {
+          font-size: 20px;
+        }
+
+        input,
+        button {
+          padding: 12px;
+          font-size: 14px;
+        }
+      }
+
+    /* Spinner Style */
+  .spinner {
+    border: 3px solid #f3f3f3; /* Light grey */
+    border-top: 3px solid #3498db; /* Blue */
+    border-radius: 50%;
+    width: 16px;
+    height: 16px;
+    animation: spin 1s linear infinite;
+    display: inline-block;
+    vertical-align: middle;
+    margin-left: 10px;
+  }
+
+  /* Spinner Animation */
+  @keyframes spin {
+    0% { transform: rotate(0deg); }
+    100% { transform: rotate(360deg); }
+  }
+
+  /* Hidden Class */
+  .hidden {
+    display: none;
+  }
+
+  /* Card Hover Effects */
+.card {
+  transition: transform 0.3s, box-shadow 0.3s;
+  cursor: pointer;
+}
+
+.card:hover {
+  transform: scale(1.05);
+  box-shadow: 0px 4px 12px rgba(0, 0, 0, 0.2);
+}
+
+    </style>
+  </head>
+  <body>
+    <!-- Container for the login form -->
+    <div class="container">
+      <!-- Login Section -->
+      <div id="loginSection">
+        <h2>Login</h2>
+        <div class="error" id="error"></div>
+         <form id="loginForm">
         <input type="text" id="email" placeholder="Email" required />
         <input type="password" id="password" placeholder="Password" required />
         <button type="submit" id="loginButton">
           <span id="loginButtonText">Login</span>
           <span id="loginSpinner" class="spinner hidden"></span>
         </button>
-      </form>
-    </div>
-
-    <!-- Dashboard Section -->
-    <div id="dashboardSection" class="hidden">
-      <div class="header-row">
-        <h2>Welcome, <span id="userEmail"></span>!</h2>
-        <button onclick="logout()" class="logout-button">Logout</button>
+        </form>
       </div>
 
-      <div class="card-container">
-        <div class="card-grid">
-          <div class="card" onclick="openPage('partyInfo')"><h3>Party Info</h3></div>
-          <div class="card" onclick="openPage('purchase')"><h3>Purchase</h3></div>
-          <div class="card" onclick="openPage('sales')"><h3>Sales</h3></div>
-          <div class="card" onclick="openPage('return')"><h3>Return</h3></div>
-          <div class="card" onclick="openPage('report')"><h3>Report</h3></div>
-        </div>
-      </div>
-    </div>
-
-    <!-- Page Content Section -->
-    <div id="pageContentSection" class="hidden">
-      <button onclick="backToDashboard()" class="back-button">← Back</button>
-      <h2 id="pageTitle"></h2>
-      <p id="pageContent"></p>
-    </div>
+      <!-- Dashboard Section (hidden initially) -->
+      <!-- Dashboard Section (hidden initially) -->
+<div id="dashboardSection" class="hidden">
+  <div style="display: flex; justify-content: space-between; align-items: center; margin-bottom: 20px;">
+    <h2>Welcome, <span id="userEmail"></span>!</h2>
+    <button onclick="logout()" style="padding: 8px 14px; background-color: #dc3545; color: white; border: none; border-radius: 5px; cursor: pointer; transition: background-color 0.3s;">
+  Logout
+</button>
   </div>
 
-  <script src="script.js"></script>
+  <div class="card-container">
+    <div style="display: flex; flex-wrap: wrap; gap: 10px; justify-content: center;">
+
+      <div class="card" style="flex: 1 1 calc(45% - 10px); background-color: #ffffff; padding: 20px; border-radius: 10px; box-shadow: 0px 0px 5px rgba(0,0,0,0.1); min-width: 140px; text-align: center;" onclick="openPage('partyInfo')">
+        <h3 style="font-size: 18px; margin-bottom: 10px;">Party Info</h3>
+      </div>
+
+      <div class="card" style="flex: 1 1 calc(45% - 10px); background-color: #ffffff; padding: 20px; border-radius: 10px; box-shadow: 0px 0px 5px rgba(0,0,0,0.1); min-width: 140px; text-align: center;" onclick="openPage('purchase')">
+        <h3 style="font-size: 18px; margin-bottom: 10px;">Purchase</h3>
+      </div>
+
+      <div class="card" style="flex: 1 1 calc(45% - 10px); background-color: #ffffff; padding: 20px; border-radius: 10px; box-shadow: 0px 0px 5px rgba(0,0,0,0.1); min-width: 140px; text-align: center;" onclick="openPage('sales')">
+        <h3 style="font-size: 18px; margin-bottom: 10px;">Sales</h3>
+      </div>
+
+      <div class="card" style="flex: 1 1 calc(45% - 10px); background-color: #ffffff; padding: 20px; border-radius: 10px; box-shadow: 0px 0px 5px rgba(0,0,0,0.1); min-width: 140px; text-align: center;" onclick="openPage('return')">
+        <h3 style="font-size: 18px; margin-bottom: 10px;">Return</h3>
+      </div>
+
+      <div class="card" style="flex: 1 1 calc(45% - 10px); background-color: #ffffff; padding: 20px; border-radius: 10px; box-shadow: 0px 0px 5px rgba(0,0,0,0.1); min-width: 140px; text-align: center;" onclick="openPage('report')">
+        <h3 style="font-size: 18px; margin-bottom: 10px;">Report</h3>
+      </div>
+
+    </div>
+  </div>
+</div>
+
+<!-- Page Content Section -->
+<div id="pageContentSection" class="hidden">
+  <button onclick="backToDashboard()" style="margin-bottom: 20px; background-color: #007BFF; color: white; border: none; padding: 10px 20px; border-radius: 5px;">← Back</button>
+  <h2 id="pageTitle"></h2>
+  <p id="pageContent"></p>
+</div>
+
+
+    </div>
+
+
+<script>
+const SCRIPT_URL = 'https://script.google.com/macros/s/AKfycbyZs7Xr2OxZdwMg-iZFJYaBDrj3ik5H-mkXKncQrMPyvPXvnfDmkWGP9O0eFpVxe_U1Xw/exec';
+
+window.onload = function () {
+  // Check session on load — not available with ContentService, so show login by default
+  showLogin();
+
+  // Attach submit event to the form
+  document.getElementById('loginForm').addEventListener('submit', function(event) {
+    event.preventDefault();
+    login();
+  });
+};
+
+function login() {
+  const email = document.getElementById('email').value;
+  const password = document.getElementById('password').value;
+  const loginButton = document.getElementById('loginButton');
+  const loginButtonText = document.getElementById('loginButtonText');
+  const loginSpinner = document.getElementById('loginSpinner');
+
+  // Show spinner
+  loginButton.disabled = true;
+  loginButtonText.classList.add('hidden');
+  loginSpinner.classList.remove('hidden');
+
+  fetch(`${SCRIPT_URL}?action=login&email=${encodeURIComponent(email)}&password=${encodeURIComponent(password)}`)
+    .then(res => res.json())
+    .then(response => {
+      loginButton.disabled = false;
+      loginButtonText.classList.remove('hidden');
+      loginSpinner.classList.add('hidden');
+
+      if (response.success) {
+        showDashboard(response.email);
+        document.getElementById('error').innerText = "";
+      } else {
+        document.getElementById('error').innerText = response.message;
+      }
+    })
+    .catch(err => {
+      loginButton.disabled = false;
+      loginButtonText.classList.remove('hidden');
+      loginSpinner.classList.add('hidden');
+      document.getElementById('error').innerText = 'Network error. Please try again.';
+    });
+}
+
+function logout() {
+  const email = document.getElementById('userEmail').innerText;
+  fetch(`${SCRIPT_URL}?action=logout&email=${encodeURIComponent(email)}`)
+    .then(() => showLogin())
+    .catch(() => showLogin()); // Fallback on error
+}
+
+function showLogin() {
+  document.getElementById('loginSection').classList.remove('hidden');
+  document.getElementById('dashboardSection').classList.add('hidden');
+  document.getElementById('pageContentSection').classList.add('hidden');
+}
+
+function showDashboard(email) {
+  document.getElementById('loginSection').classList.add('hidden');
+  document.getElementById('dashboardSection').classList.remove('hidden');
+  document.getElementById('userEmail').innerText = email;
+}
+
+function openPage(pageName) {
+  document.getElementById('dashboardSection').classList.add('hidden');
+  document.getElementById('pageContentSection').classList.remove('hidden');
+
+  let title = '';
+  let content = '';
+
+  switch(pageName) {
+    case 'partyInfo':
+      title = 'Party Information';
+      content = 'Here you can manage Party Information.';
+      break;
+    case 'purchase':
+      title = 'Purchase';
+      content = 'Here you can manage Purchases.';
+      break;
+    case 'sales':
+      title = 'Sales';
+      content = 'Here you can manage Sales.';
+      break;
+    case 'return':
+      title = 'Returns';
+      content = 'Here you can manage Returns.';
+      break;
+    case 'report':
+      title = 'Reports';
+      content = 'Here you can view Reports.';
+      break;
+  }
+
+  document.getElementById('pageTitle').innerText = title;
+  document.getElementById('pageContent').innerText = content;
+}
+
+function backToDashboard() {
+  document.getElementById('pageContentSection').classList.add('hidden');
+  document.getElementById('dashboardSection').classList.remove('hidden');
+}
+</script>
 </body>
 </html>
