--- a/index.html
+++ b/index.html
@@ -3,130 +3,8 @@
   <head>
     <title>Login / Dashboard</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <style>
-      /* Basic Styling */
-      body {
-        font-family: Arial, sans-serif;
-        padding: 20px;
-        margin: 0;
-        background-color: #f4f4f9;
-      }
+     <link rel="stylesheet" href="styles.css" />
 
-      /* Centered Container */
-      .container {
-        max-width: 400px;
-        margin: auto;
-        background-color: white;
-        padding: 20px;
-        border-radius: 10px;
-        box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
-      }
-
-      h2 {
-        text-align: center;
-        font-size: 24px;
-        margin-bottom: 20px;
-      }
-
-      /* Form Input Fields */
-      input,
-      button {
-        width: 100%;
-        padding: 14px;
-        margin: 8px 0;
-        box-sizing: border-box;
-        border: 1px solid #ccc;
-        border-radius: 5px;
-        font-size: 16px;
-      }
-
-      input:focus,
-      button:focus {
-        outline: none;
-        border-color: #007BFF;
-      }
-
-      /* Button Styling */
-      button {
-        background-color: #007BFF;
-        color: white;
-        border: none;
-        cursor: pointer;
-      }
-
-      button:hover {
-        background-color: #0056b3;
-      }
-
-      /* Error Message */
-      .error {
-        color: red;
-        font-size: 14px;
-        margin-bottom: 20px;
-      }
-
-      /* Hide sections */
-      .hidden {
-        display: none;
-      }
-
-      /* Responsive Design */
-      @media (max-width: 600px) {
-        body {
-          padding: 10px;
-        }
-
-        .container {
-          padding: 15px;
-        }
-
-        h2 {
-          font-size: 20px;
-        }
-
-        input,
-        button {
-          padding: 12px;
-          font-size: 14px;
-        }
-      }
-
-    /* Spinner Style */
-  .spinner {
-    border: 3px solid #f3f3f3; /* Light grey */
-    border-top: 3px solid #3498db; /* Blue */
-    border-radius: 50%;
-    width: 16px;
-    height: 16px;
-    animation: spin 1s linear infinite;
-    display: inline-block;
-    vertical-align: middle;
-    margin-left: 10px;
-  }
-
-  /* Spinner Animation */
-  @keyframes spin {
-    0% { transform: rotate(0deg); }
-    100% { transform: rotate(360deg); }
-  }
-
-  /* Hidden Class */
-  .hidden {
-    display: none;
-  }
-
-  /* Card Hover Effects */
-.card {
-  transition: transform 0.3s, box-shadow 0.3s;
-  cursor: pointer;
-}
-
-.card:hover {
-  transform: scale(1.05);
-  box-shadow: 0px 4px 12px rgba(0, 0, 0, 0.2);
-}
-
-    </style>
   </head>
   <body>
     <!-- Container for the login form -->
