--- a/index.html
+++ b/index.html
@@ -26,11 +26,9 @@
       <!-- Dashboard Section (hidden initially) -->
       <!-- Dashboard Section (hidden initially) -->
 <div id="dashboardSection" class="hidden">
-  <div style="display: flex; justify-content: space-between; align-items: center; margin-bottom: 20px;">
+  <div class="header-row">
     <h2>Welcome, <span id="userEmail"></span>!</h2>
-    <button onclick="logout()" style="padding: 8px 14px; background-color: #dc3545; color: white; border: none; border-radius: 5px; cursor: pointer; transition: background-color 0.3s;">
-  Logout
-</button>
+    <button onclick="logout()" class="logout-button">Logout</button>
   </div>
 
   <div class="card-container">
