--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
 <!-- Page Content Section -->
 <div id="pageContentSection" class="hidden">
-  <button onclick="backToDashboard()" style="margin-bottom: 20px; background-color: #007BFF; color: white; border: none; padding: 10px 20px; border-radius: 5px;">← Back</button>
+  <button onclick="backToDashboard()" class="back-button">← Back</button>
   <h2 id="pageTitle"></h2>
   <p id="pageContent"></p>
 </div>
