--- a/party-info.html
+++ b/party-info.html
@@ -12,7 +12,7 @@
         <button onclick="logout()" class="logout-button">Logout</button>
       </div>
 
-      <button onclick="goToDashboard()" class="back-button">← Back to Dashboard</button>
+      <button onclick="goToDashboard()" class="back-button">? Back to Dashboard</button>
 
       <div>
         <p>Here you can manage Party Information.</p>
@@ -28,15 +28,12 @@
     <script src="script.js"></script>
     <script>
       // Optional: ensure user is logged in before showing content
-window.onload = function () {
-  const email = sessionStorage.getItem("userEmail");
-  if (!email) {
-    window.location.href = "index.html"; // redirect to login if not logged in
-  } else {
-    document.getElementById("userEmail").innerText = email;
-  }
-};
-
+      window.onload = function () {
+        const email = sessionStorage.getItem("userEmail");
+        if (!email) {
+          window.location.href = "index.html"; // redirect to login if not logged in
+        }
+      };
 
       function goToDashboard() {
         window.location.href = "index.html"; // redirect back to main dashboard
