--- a/index.html
+++ b/index.html
@@ -33,8 +33,7 @@
 
   <div class="card-container">
         <div class="card-grid">
-          
-          <a href="party-info.html" class="card"><h3>Party Info</h3></a>
+          <div class="card" onclick="openPage('partyInfo')"><h3>Party Info</h3></div>
           <div class="card" onclick="openPage('purchase')"><h3>Purchase</h3></div>
           <div class="card" onclick="openPage('sales')"><h3>Sales</h3></div>
           <div class="card" onclick="openPage('return')"><h3>Return</h3></div>
