--- a/index.html
+++ b/index.html
@@ -52,7 +52,16 @@
 
     </div>
 
-
+<script> 
+window.onload = function () {
+   document.getElementById('loginSpinner').classList.add('hidden');
+  showLogin();
+  document.getElementById('loginForm').addEventListener('submit', function(event) {
+    event.preventDefault();
+    login();
+  });
+};
+</script>
 <script src="script.js"></script>
 </body>
 </html>
