--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 <script> 
 window.onload = function () {
 
-  showLogin();
+  isLoggedIn();
   document.getElementById('loginForm').addEventListener('submit', function(event) {
     event.preventDefault();
     login();
