--- a/index.html
+++ b/index.html
@@ -51,8 +51,10 @@
 
 
     </div>
-
-
 <script src="script.js"></script>
+<script>
+  window.onload = initializeLoginPage;
+</script>
+
 </body>
 </html>
