--- a/party-info.html
+++ b/party-info.html
@@ -26,15 +26,8 @@
     </div>
 
     <script src="script.js"></script>
+    <script src="auth.js"></script>
     <script>
-      // Optional: ensure user is logged in before showing content
-      window.onload = function () {
-        const email = localStorage.getItem("sessionEmail");
-        if (!email) {
-          window.location.href = "index.html"; // redirect to login if not logged in
-        }
-      };
-
       function goToDashboard() {
         window.location.href = "index.html"; // redirect back to main dashboard
       }
