--- a/party-info.html
+++ b/party-info.html
@@ -74,7 +74,23 @@
                 </tr>
 
               </template>
-    </div>
+                    <div id="party-info" class="row">
+                <div class="col-xs-6">
+                  <div  class="partyInfo">
+                    <div id="party-code"></div>
+                    <div id="party-name"></div>
+                    <div id="party-address"></div>
+                    <div id="party-city"></div>
+                    <div id="party-phone"></div>
+                    <div id="party-GST"></div>
+                    <input type="text" id="party-rate-code" oninput="this.value = this.value.toUpperCase()">
+                  </div>
+
+                </div>
+
+              </div>
+</div>
+
 
     <script src="script.js"></script>
     <script src="auth.js"></script>
