--- a/party-info.html
+++ b/party-info.html
@@ -175,7 +175,7 @@ function setDataForSearch() {
   const params = new URLSearchParams();
   params.append('action', 'getPartyList');
 
-  fetch('YOUR_SCRIPT_DEPLOYMENT_URL', {
+  fetch('https://script.google.com/macros/s/AKfycbxoHzGe9svxvgI3W_FYFW4SIqXohNzDxs1TRLyF6643P7TS6knEuearHLzjLWotcQHYzA/exec', {
     method: 'POST',
     headers: { 'Content-Type': 'application/x-www-form-urlencoded' },
     body: params.toString()
