--- a/party-info.html
+++ b/party-info.html
@@ -29,7 +29,7 @@
       </div>
 
       <button onclick="goToDashboard()" class="back-button">? Back to Dashboard</button>
-
+<div id="app">
               <div class="form-group">
 
                 <div class="input-group mb-3">
@@ -98,6 +98,7 @@
               </div>
 </div>
 </div>
+
 
 
     <script src="script.js"></script>
